Fix padding on both sides of website on mobile
Bug appeared due to scroll, have to manually set padding on the left
Ref: https://basecamp.com/1759305/projects/1594427-collectorsquest-com/todos/22791909-have-the-same

--- a/web/less/frontend/_responsive-767px-max.less
+++ b/web/less/frontend/_responsive-767px-max.less
@@ -16,8 +16,9 @@
 
   // Padding to set content in a bit
     body {
-      padding-left: 0;
       padding-right: 0;
+      // fix to have the same "padding" on both sides of the website on mobile due to scroll
+      padding-left: 10px;
     }
 
   // Remove padding on container given explicit padding set on body
